model fixes